[gd_scene load_steps=13 format=3 uid="uid://dmwo5xd8rk2e"]

[ext_resource type="Texture2D" uid="uid://bbnfdju2e40lp" path="res://Batiok.png" id="1_3k722"]
[ext_resource type="Script" path="res://fatger.gd" id="1_6nwy1"]
[ext_resource type="Texture2D" uid="uid://b6koj4m3y2sgd" path="res://batiok biot zhoska.png" id="2_10i1d"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0r255"]
radius = 17.1172

[sub_resource type="AtlasTexture" id="AtlasTexture_p4d8b"]
atlas = ExtResource("2_10i1d")
region = Rect2(0, 0, 26, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j05k8"]
atlas = ExtResource("2_10i1d")
region = Rect2(26, 0, 26, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tv7ge"]
atlas = ExtResource("2_10i1d")
region = Rect2(52, 0, 26, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kcsq"]
atlas = ExtResource("1_3k722")
region = Rect2(0, 0, 20, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tp2f7"]
atlas = ExtResource("1_3k722")
region = Rect2(20, 0, 20, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_06ow2"]
atlas = ExtResource("1_3k722")
region = Rect2(40, 0, 20, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_7jis7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4d8b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j05k8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tv7ge")
}],
"loop": true,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kcsq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tp2f7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_06ow2")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_oljk5"]
radius = 318.926

[node name="Naighbor" type="Node2D"]
script = ExtResource("1_6nwy1")

[node name="min_Detector" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="min_Detector"]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_0r255")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_7jis7")
animation = &"Death"

[node name="Detector" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
shape = SubResource("CircleShape2D_oljk5")

[connection signal="body_entered" from="min_Detector" to="." method="_on_min_detector_body_entered"]
[connection signal="body_exited" from="min_Detector" to="." method="_on_min_detector_body_exited"]
[connection signal="body_entered" from="Detector" to="." method="_on_detector_body_entered"]
[connection signal="body_exited" from="Detector" to="." method="_on_detector_body_exited"]
